@@ -11,6 +11,7 @@ define( function( require ) {
 
   // imports
   var inherit = require( 'PHET_CORE/inherit' );
+  var Node = require( 'SCENERY/nodes/Node' );
   var PHScaleConstants = require( 'PH_SCALE/common/PHScaleConstants' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Util = require( 'DOT/Util' );
@@ -21,21 +22,30 @@ define( function( require ) {
    * @param {ModelViewTransform2} mvt
    * @constructor
    */
-  function SolutionNode( solution, beaker, mvt ) {
+  function SolutionNode( solvent, solution, beaker, mvt ) {
 
     var thisNode = this;
-    Rectangle.call( thisNode, 0, 0, 1, 1, { lineWidth: 1 } );
+    Node.call( thisNode );
 
     thisNode.solution = solution;
     thisNode.beaker = beaker;
+
+    /*
+     * Solution color uses alpha modulation to represent concentration.
+     * Overlay this on top of the solvent color.
+     */
+    var solventNode = new Rectangle( 0, 0, 1, 1, { fill: solvent.colorProperty.get() } ); // size set dynamically
+    var solutionNode = new Rectangle( 0, 0, 1, 1, { lineWidth: 1 } );  // size and fill set dynamically
+    thisNode.addChild( solventNode );
+    thisNode.addChild( solutionNode );
 
     /*
      * Updates the color of the solution, accounting for saturation.
      * @param {Color} color
      */
     solution.colorProperty.link( function( color ) {
-      thisNode.fill = color;
-      thisNode.stroke = color.darkerColor();
+      solutionNode.fill = color;
+      solutionNode.stroke = color.darkerColor();
     } );
 
     /*
@@ -58,11 +68,12 @@ define( function( require ) {
       var viewHeight = mvt.modelToViewDeltaY( solutionHeight );
 
       // shape
-      thisNode.setRect( viewLocation.x - (viewWidth / 2), viewLocation.y - viewHeight, viewWidth, viewHeight );
+      solventNode.setRect( viewLocation.x - (viewWidth / 2), viewLocation.y - viewHeight, viewWidth, viewHeight );
+      solutionNode.setRect( viewLocation.x - (viewWidth / 2), viewLocation.y - viewHeight, viewWidth, viewHeight );
     } );
   }
 
-  inherit( Rectangle, SolutionNode );
+  inherit( Node, SolutionNode );
 
   return SolutionNode;
 
